# depp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
inc/: acting.hpp  ast.h  builtin.hpp  env.hpp  generator.hpp  lisp.h  utils.hpp
src/: CMakeLists.txt  acting.cpp  ast.cpp  builtin.cpp  env.cpp  generator.cpp  lisp.y  parser.y  scanner.l
test/: CMakeLists.txt  main.cpp  test_builtin.cpp
